--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "all_frames": true,
-        "js": ["scripts/content.js", "scripts/jquery.min.js"]
+        "js": ["scripts/content.js", "scripts/jquery.min.js","scripts/helpers.js"]
   }],
     "permissions": [
     "activeTab",
