loop with bugs!

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "128": "icons/icon-128.png"
   },
   "background": {
-    "scripts": ["scripts/background.js", "scripts/surf.js"]
+    "scripts": ["scripts/background.js", "scripts/surf.js", "scripts/starter.js"]
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
