--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,8 @@
   ],
   "permissions": [
     "activeTab",
+    "alarms",
+    "notifications",
     "tabs",
     "http://*/*",
     "https://*/*",
