--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "all_frames": true,
-    "js": ["scripts/content.js", "scripts/jquery.min.js", "scripts/helpers.js", "scripts/bililiteRange.js", "scripts/jquery.sendkeys.js"],
+    "js": ["scripts/content.js", "scripts/jquery.min.js", "scripts/helpers.js", "scripts/bililiteRange.js", "scripts/jquery.sendkeys.js","scripts/jquery.typetype.js"],
     "css": ["css/myactivetab.css"]
   }],
   "web_accessible_resources": [
