with twitter, request is sometimes sent before the page loaded, may be I should add twitter permissions explicitly to the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -45,6 +45,7 @@
         //"clipboardRead",
         //"clipboardWrite",
         "contentSettings",
+        "devtools_page",
         "debugger",
         "history",
         "idle",
