--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
         "48": "icons/icon-48.png",
         "128": "icons/icon-128.png"
     },
+    "devtools_page": "devtools.html",
     "background": {
         "scripts": ["scripts/background.js", "scripts/surf.js", "scripts/starter.js", "scripts/footer.js"]
     },
